--- a/src/client/index.html
+++ b/src/client/index.html
@@ -18,8 +18,7 @@
             <div class="rover" id="opportunity">Opportunity</div>
             <div class="rover" id="spirit">Spirit</div>
         </div>
-        <div id="root">
-        </div>
+        <div id="root"></div>
     </main>
 </body>
 <script src="/app.js"></script>
