--- a/src/client/index.html
+++ b/src/client/index.html
@@ -13,8 +13,8 @@
 
 
     <div class="app">
-        <div class="app-layout">
-            <div class="app-sidebar">
+        <!-- <div class="app-layout"> -->
+            <div class="app-header">
                 <div class="relative py-3 sm:mx-auto">
                     <h2 class="text-gray-900 text-4xl mb-6 font-medium">Choose A Rover</h2>
                     <div class="rover-options-wrapper">
@@ -22,23 +22,13 @@
                         <button class="rover-option" id="opportunity">Opportunity</button>
                         <button class="rover-option" id="spirit">Spirit</button>
                     </div>
-                    <label class="block max-w-sm mx-auto">
-                        <span class="text-gray-700">Select A Rover</span>
-                        <select class="form-select block w-full mt-1">
-                            <option selected disabled value="">Select</option>
-                            <option value="curiosity">Curiosity</option>
-                            <option value="opportunity">Opportunity</option>
-                            <option value="spirit">Spirit</option>
-                        </select>
-                      </label>
+
                 </div>
             </div>
-            <div class="app-info"></div>
             <div class="app-images">
-                <div id="root"></div>
+                <div id="root" class="container flex mx-auto"></div>
             </div>
-        </div>
-
+        <!-- </div> -->
     </div>
 
 </body>
