--- a/src/client/index.html
+++ b/src/client/index.html
@@ -15,14 +15,23 @@
     <div class="app">
         <!-- <div class="app-layout"> -->
             <div class="app-header">
+                <label class="block max-w-sm mx-auto">
+                    <span class="text-gray-700">Select A Rover</span>
+                    <select class="block w-full mt-1 form-select">
+                        <option selected disabled value="">Select</option>
+                        <option value="curiosity">Curiosity</option>
+                        <option value="opportunity">Opportunity</option>
+                        <option value="spirit">Spirit</option>
+                    </select>
+                </label>
+
                 <div class="relative py-3 sm:mx-auto">
-                    <h2 class="text-gray-900 text-4xl mb-6 font-medium">Choose A Rover</h2>
+                    <h2 class="mb-6 text-4xl font-medium text-gray-900">Choose A Rover</h2>
                     <div class="rover-options-wrapper">
                         <button class="rover-option" id="curiosity">Curiosity</button>
                         <button class="rover-option" id="opportunity">Opportunity</button>
                         <button class="rover-option" id="spirit">Spirit</button>
                     </div>
-
                 </div>
             </div>
             <div class="app-images">
