--- a/src/client/design.html
+++ b/src/client/design.html
@@ -20,7 +20,7 @@
 
       <div class="w-5/6 mx-auto mt-3 rover-selector-wrapper md:mt-0 md:mr-0 md:w-1/3 md:mb-0">
         <label class="block max-w-sm mx-auto">
-          <select class="block w-full mt-1 font-extrabold text-gray-700 form-select">
+          <select id="rover-select" class="block w-full mt-1 font-bold text-gray-700 form-select">
             <option selected disabled value="">Select A Rover</option>
             <option value="curiosity">Curiosity</option>
             <option value="opportunity">Opportunity</option>
