--- a/src/client/design.html
+++ b/src/client/design.html
@@ -16,7 +16,8 @@
 
   <header class="text-white bg-indigo-700">
     <div class="items-center justify-between max-w-5xl p-4 py-8 mx-auto text-center md:flex md:py-12 xl:px-0">
-      <h1 class="text-xl font-bold leading-10 header-title sm:text-2xl md:text-3xl lg:text-4xl">Mars Rover Dashboard</h1>
+      <h1 class="text-xl font-bold leading-10 header-title sm:text-2xl md:text-3xl lg:text-4xl">Mars Rover Dashboard
+      </h1>
 
       <div class="w-5/6 mx-auto mt-3 rover-selector-wrapper md:mt-0 md:mr-0 md:w-1/3 md:mb-0">
         <label class="block max-w-sm mx-auto">
@@ -34,13 +35,48 @@
 
   <main class="pb-16 mt-6 mb-6">
     <div class="max-w-4xl px-4 mx-auto main-content-wrapper">
-
       <!-- Rover Info -->
       <div class="grid gap-6 mt-16 mb-20 rover-info sm:grid-cols-2 lg:grid-cols-4">
-        <div class="flex items-center justify-center w-48 h-32 pb-8 mx-auto bg-gray-300 rounded-md shadow-sm rover-info-item">Info Item 1</div>
-        <div class="flex items-center justify-center w-48 h-32 pb-8 mx-auto bg-gray-300 rounded-md shadow-sm rover-info-item">Info Item 2</div>
-        <div class="flex items-center justify-center w-48 h-32 pb-8 mx-auto bg-gray-300 rounded-md shadow-sm rover-info-item">Info Item 3</div>
-        <div class="flex items-center justify-center w-48 h-32 pb-8 mx-auto bg-gray-300 rounded-md shadow-sm rover-info-item">Info Item 4</div>
+
+        <div
+          class="flex flex-col items-center justify-center w-48 h-32 mx-auto bg-gray-300 rounded-md shadow-sm rover-info-item">
+          <div class="font-thin text-gray-700 rover-info-label">
+            Rover Name
+          </div>
+          <div class="-mt-1 text-2xl font-bold text-indigo-900 rover-info-text">
+            Curiosity
+          </div>
+        </div>
+
+        <div
+          class="flex flex-col items-center justify-center w-48 h-32 mx-auto bg-gray-300 rounded-md shadow-sm rover-info-item">
+          <div class="font-thin text-gray-700 rover-info-label">
+            Status
+          </div>
+          <div class="-mt-1 text-2xl font-bold text-indigo-900 rover-info-text">
+            Active
+          </div>
+        </div>
+
+        <div
+          class="flex flex-col items-center justify-center w-48 h-32 mx-auto bg-gray-300 rounded-md shadow-sm rover-info-item">
+          <div class="font-thin text-gray-700 rover-info-label">
+            Launch Date
+          </div>
+          <div class="-mt-1 text-2xl font-bold text-indigo-900 rover-info-text">
+            2011-11-26
+          </div>
+        </div>
+
+        <div
+          class="flex flex-col items-center justify-center w-48 h-32 mx-auto bg-gray-300 rounded-md shadow-sm rover-info-item">
+          <div class="font-thin text-gray-700 rover-info-label">
+            Landing Date
+          </div>
+          <div class="-mt-1 text-2xl font-bold text-indigo-900 rover-info-text">
+            2012-08-06
+          </div>
+        </div>
       </div>
 
       <!-- Rover Images -->
