fix: adds help text when rover has not been selected

--- a/src/client/index.html
+++ b/src/client/index.html
@@ -15,7 +15,7 @@
 <body class="bg-gray-400">
 
 
-    <div id="root"></div>
+    <div id="root" class="flex flex-col h-screen"></div>
 
 </body>
 <script src="/js/app.js"></script>
